<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeaderUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="cursive"
        android:text="@string/update_header"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvDeleteID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_update" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvPracticeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_create" />

    <EditText
        android:id="@+id/etPracticeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_input_create"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvPracticeRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_create" />

    <RatingBar
        android:id="@+id/rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <Button
        android:id="@+id/btUpdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="#000000"
        app:backgroundTint="#009688" />

    <ImageView
        android:id="@+id/ivUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/activity_update_img" />

</LinearLayout>