<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="cursive"
        android:text="@string/header"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_main"
        android:textColor="#000000"
        app:backgroundTint="#F44336" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_main"
        android:textColor="#000000"
        app:backgroundTint="#009688" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_main"
        android:textColor="#000000"
        app:backgroundTint="#FFC107" />

    <Button
        android:id="@+id/btDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_main"
        android:textColor="#000000"
        app:backgroundTint="#CDDC39" />

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/main_activity_img" />

</LinearLayout>