<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvHeaderDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="cursive"
        android:text="@string/delete_header"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvDeleteID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_delete" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btDelete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        android:textColor="#000000"
        app:backgroundTint="#FFC107" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/activity_delete_img" />

</LinearLayout>